# AI-Meeting-Coordination-Agent

./: .gitignore  README.md  calendar_service.py  experiment.ipynb  gmail_service.py  main.py  poller.py  pyproject.toml  requirements.txt  ui.py
email_data/: approvals_init.py  checkpoint.py  email_init.py  fetch_pending_approval_data.py
graph_builders/: confirmation_graph_builder.py  fresh_email_graph_builder.py
nodes/confirmation_email_nodes/: approve_meeting_node.py  create_event_node.py  dont_schedule_node.py  extractReplyEmailData.py  update_email_data_in_db.py
nodes/freshh_email_nodes/: classify_email_agent.py  draft_reply.py  email_not_approved_node.py  get_available_slots.py  hITL_node.py  handle_meeting_requests.py  no_meeting_node.py  select_best_slots_node.py  send_email_node.py  store_email_data_db_node.py
services/: calendar_service.py  gmail_service.py
states/: confirmation_state.py  fresh_graph_state.py
