[project]
name = "ai-meeting-coordination-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "gradio>=6.19.0",
    "ipykernel>=7.3.0",
    "langchain>=1.3.9",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.7",
    "langchain-openai>=1.3.2",
    "langgraph>=1.2.5",
    "openai>=2.43.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "tiktoken>=0.13.0",
]
